fixing little bug

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       </div>
       <img class="section-button selected" onclick="handleSectionClick('exito')" src="assets/comprobado.png" alt="Éxito" />
       <img class="section-button" onclick="handleSectionClick('olimpica')" src="assets/Olimpical.png" alt="Olimpica" />
-      <img class="section-button" onclick="handleSectionClick('fallabella')" src="assets/fallabella.png" alt="Falabella" />
+      <img class="section-button" onclick="handleSectionClick('falabella')" src="assets/fallabella.png" alt="Falabella" />
       <img class="section-button" onclick="handleSectionClick('alkosto')" src="assets/alkosto-logo.png" alt="Alkosto" />
-      <img class="section-button" onclick="handleSectionClick('mercadolibre')" src="assets/mercadolibre-logo.png" alt="MercadoLibre" />
+      <img class="section-button" onclick="handleSectionClick('mercado')" src="assets/mercadolibre-logo.png" alt="MercadoLibre" />
     </div>
     <div class="main-content">
       <div class="toggle-container">
